No scrollbar class fix

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -100,6 +100,6 @@
 .no-scrollbar {
   scrollbar-width: none;
 }
-.no-scroll::-webkit-scrollbar {
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
